--- a/packages/demo/app.json
+++ b/packages/demo/app.json
@@ -19,13 +19,17 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "demo"
+      "bundleIdentifier": "demo",
+      "infoPlist": {
+        "NSCameraUsageDescription": "For demo purposes"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.blu3beri.demo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
