--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "expo": "~45.0.0",
+    "expo-barcode-scanner": "^11.3.0",
+    "expo-camera": "^12.2.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-barcode-mask": "^1.2.4",
     "react-native-keychain": "^8.0.0",
-    "react-native-web": "0.17.7",
-    "expo-splash-screen": "~0.15.1"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
