improved keychain with context
Signed-off-by: Berend Sliedrecht <berend@animo.id>

--- a/packages/demo/app.json
+++ b/packages/demo/app.json
@@ -14,14 +14,13 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "demo",
+      "bundleIdentifier": "com.beri.demo",
       "infoPlist": {
-        "NSCameraUsageDescription": "For demo purposes"
+        "NSCameraUsageDescription": "For demo purposes",
+        "NSFaceIDUsageDescription": "For demo purposes"
       }
     },
     "android": {
