feat(qr): custom style and improved default styling for text
Signed-off-by: Berend Sliedrecht <berend@animo.id>

--- a/packages/demo/app.json
+++ b/packages/demo/app.json
@@ -17,7 +17,7 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.beri.demo",
+      "bundleIdentifier": "com.blu3beri.demo",
       "infoPlist": {
         "NSCameraUsageDescription": "For demo purposes",
         "NSFaceIDUsageDescription": "For demo purposes"
