fix(kc): keychain works, but accessControl seems to be broken
Signed-off-by: Berend Sliedrecht <berend@animo.id>

--- a/packages/demo/app.json
+++ b/packages/demo/app.json
@@ -14,10 +14,12 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.blu3beri.demo",
+      "bundleIdentifier": "com.beri.demo",
       "infoPlist": {
         "NSCameraUsageDescription": "For demo purposes",
         "NSFaceIDUsageDescription": "For demo purposes"
