--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -17,8 +17,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-argon2": "^2.0.1",
     "react-native-barcode-mask": "^1.2.4",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-keychain": "^8.0.0",
+    "react-native-mmkv": "^2.4.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
