--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -1,6 +1,7 @@
 {
   "name": "demo",
   "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,20 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@animo-id/react-native-keychain": "*",
+    "@animo-id/react-native-qrscanner": "*",
     "expo": "~45.0.0",
-    "expo-barcode-scanner": "^11.3.0",
-    "expo-camera": "^12.2.0",
     "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-argon2": "^2.0.1",
-    "react-native-barcode-mask": "^1.2.4",
-    "react-native-get-random-values": "^1.8.0",
-    "react-native-keychain": "^8.0.0",
-    "react-native-mmkv": "^2.4.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-status-bar": "~1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
