fix: minor patches on the structure
Signed-off-by: Berend Sliedrecht <berend@animo.id>

--- a/packages/keychain/package.json
+++ b/packages/keychain/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@animo-id/react-native-keychain",
   "version": "0.0.0",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "license": "MIT",
   "dependencies": {
     "react-native-get-random-values": "^1.8.0",
