--- a/packages/qrscanner/package.json
+++ b/packages/qrscanner/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@animo-id/react-native-qrscanner",
   "version": "0.0.0",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "license": "MIT",
   "dependencies": {
     "react-native-barcode-mask": "^1.2.4",
