--- a/packages/keychain/package.json
+++ b/packages/keychain/package.json
@@ -9,7 +9,7 @@
   },
   "version": "0.0.0",
   "license": "Apache-2.0",
-  "main": "build/index",
+  "main": "src/index",
   "types": "build/index",
   "files": [
     "build"
