--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@ node_modules
 yarn-error.log
 .DS_Store
 .expo
-packages/demo/.expo-shared
-packages/demo/ios
-packages/demo/android
+.expo-shared
+demo/ios
+demo/android
+dist/
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
