--- a/packages/qr-scanner/package.json
+++ b/packages/qr-scanner/package.json
@@ -27,12 +27,18 @@
     "compile": "tsc -p tsconfig.build.json"
   },
   "dependencies": {
-    "react-native-barcode-mask": "1.2.4",
     "expo-barcode-scanner": "11.3.0",
-    "expo-camera": "12.2.0"
+    "expo-camera": "12.2.0",
+    "query-string": "7.0.1",
+    "react-native-barcode-mask": "1.2.4",
+    "reflect-metadata": "^0.1.13"
+  },
+  "devDependencies": {
+    "@aries-framework/core": "0.2.0-alpha.101"
   },
   "peerDependencies": {
-    "react-native": ">= 0.64.0",
-    "react": ">= 0.16.0"
+    "@aries-framework/core": "0.2.0-alpha.101",
+    "react": ">= 0.16.0",
+    "react-native": ">= 0.64.0"
   }
 }
