--- a/packages/qr-scanner/package.json
+++ b/packages/qr-scanner/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@aries-components/qr-scanner",
+  "name": "@aries-components/expo-qr-scanner",
   "description": "Qr scanner specifically designed for Aries",
   "homepage": "https://github.com/animo/mobile-components",
   "repository": {
     "url": "https:://github.com/animo/mobile-components",
     "type": "git",
-    "directory": "packages/qr-scanner"
+    "directory": "packages/expo-qr-scanner"
   },
   "version": "0.0.0",
   "license": "Apache-2.0",
