--- a/demo/package.json
+++ b/demo/package.json
@@ -35,7 +35,9 @@
     "react-native-web": "^0.17.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
+    "babel-plugin-module-resolver": "^4.0.0",
     "@storybook/addon-essentials": "~6.3",
     "@storybook/addon-links": "~6.3",
     "@storybook/addon-react-native-web": "^0.0.18",
