--- a/packages/expo-qr-scanner/package.json
+++ b/packages/expo-qr-scanner/package.json
@@ -9,10 +9,12 @@
   },
   "version": "0.0.0",
   "license": "Apache-2.0",
-  "main": "src/index",
+  "main": "build/index",
+  "source": "src/index",
   "types": "build/index",
   "files": [
-    "build"
+    "build",
+    "src"
   ],
   "publishConfig": {
     "access": "public"
